<resources>
    <string name="app_name">PamoApp</string>

    <string name="name_hint">Name</string>
    <string name="country_hint">Country</string>
    <string name="city_hint">City</string>
    <string name="street_hint">Street</string>
    <string name="house_number_hint">House number</string>
    <string name="apartment_hint">Apartment</string>
    <string name="save_button_name">SAVE</string>
    <string name="delete_button_name">Delete</string>
    <string name="delete_address_dialog_message">Delete the address?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirmation">Yes, delete</string>

</resources>
